Added in controlller for alarms
