# api/swagger/swagger.yaml
@@ -45,12 +45,15 @@ paths:
   /alarms:
     x-swagger-router-controller: alarms
     post:
+      tags:
+        - alarm
+      summary: create alarm
       description: accepts a new alarm and returns same
       operationId: createAlarm
       parameters:
         - in: body
           name: alarm
-          description: the alarm details to be stored
+          description: the alarm details to create
           required: true
           schema:
             $ref: '#/definitions/Alarm'
@@ -64,7 +67,10 @@ paths:
           schema:
             $ref: '#/definitions/ErrorResponse'
     get:
-      description: lists all alarms
+      tags:
+        - alarms
+      summary: get all alarms
+      description: returns a list of all alarms
       operationId: getAllAlarms
       responses:
         '200':
@@ -80,7 +86,10 @@ paths:
   /alarms/{id}:
     x-swagger-router-controller: alarms
     get:
-      description: get alarm details
+      tags:
+        - alarm
+      summary: get alarm details
+      description: get details of a single alarm
       operationId: getAlarmDetails
       parameters:
         - name: id
@@ -109,27 +118,22 @@ definitions:
         type: string
   Alarm:
     type: object
-    allOf:
-      - type: object
-        required:
-          - id
-        properties:
-          id:
-            type: string
-            pattern: '^[\da-fA-F]{8}-[\da-fA-F]{4}-[\da-fA-F]{4}-[\da-fA-F]{4}-[\da-fA-F]{12}'
-      - $ref: '#/definitions/AlarmDetail'
-  AlarmDetail:
-    type: object
     required:
+      - id
       - name
       - alertAt
     properties:
+      id:
+        type: string
+        pattern: '^[\da-fA-F]{8}-[\da-fA-F]{4}-[\da-fA-F]{4}-[\da-fA-F]{4}-[\da-fA-F]{12}'
       name:
         type: string
       alertAt:
         type: string
         format: date-time
+#        pattern: '^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}(|\.[0-9]{1,3})Z$'
   ErrorResponse:
+    type: object
     required:
       - message
     properties:
